--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .App {
   text-align: center;
+  background-color: #212529;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,11 +27,36 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.news-container {
+  max-width: 433px;
+  height: 732px;
+  overflow-y: scroll;
+  background-color: #000;
 }
+
+.news-row {
+  border-bottom: 1px solid #636363;
+}
+
+.news-row:last-child {
+  border-bottom: none;
+}
+
+.news-headline,
+.news-source {
+  margin-bottom: 0;
+  height: 60px;
+}
+
+.news-source {
+  text-decoration: none;
+}
+
+.news-img {
+  height: 60px;
+  width: 90px;
+}
+
+
+
+
