--- a/src/Body.css
+++ b/src/Body.css
@@ -1,5 +1,5 @@
 body {
-	font-family:  Arial, Helvetica, sans-serif;
+	font-family:  'Montserrat', Arial, Helvetica, sans-serif;
 	background-color: #3a404a;
 	color: #fff;
 	line-height: 1.6;
