--- a/src/Body.css
+++ b/src/Body.css
@@ -25,3 +25,12 @@ body {
 .body-container {
     max-width: 100%;
 }
+
+footer {
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
+    background:#898f96;
+ }
