--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,53 @@
 * {
-  font-family: 'Montserrat', sans-serif;
-}
-
-.App {
-  text-align: center;
-  background-color: #212529;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Montserrat',  Arial, Helvetica, sans-serif;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+	font-family:  'Montserrat';
+  background: #121212;
+	line-height: 1.6;
+  text-align: left;
 }
 
+.body-container {
+  max-width: 100%;
+}
+
+.card {
+  background: #1e1e1e!important;
+  border-radius: 15px;
+  border: 1px solid #000; 
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.list-group {
+  border-top: none!important;
+}
+
+.list-group-item {
+  background-color: #1e1e1e;
+  border: none;
+}
+.icon{
+  width: 32px;
+  height: 32px;
+}
+
+a {
+  padding-left: 10px;
+  color: #03DAC5;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #70EFDE;
+  text-decoration: underline;
+}
+.navbar-brand {
+  color: #03DAC5;
+}
 .news-container {
   min-width: 433px;
   max-width: 433px;
@@ -58,6 +79,39 @@
   width: 90px;
 }
 
+.lotr{
+  text-align: center; 
+    color: white;
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
+    background:#121212;  
+}
+.trivia-question {
+  font-size: larger;
+}
 
+.btn.incorrect {
+  color: white;
+  background-color: red;
+}
 
+.btn.correct {
+  color:white;
+  background-color: green;
+}
+
+.btn.notAnswered {
+  border: 1px solid #03DAC5;
+  color: #03DAC5;
+}
+
+.gcse-searchbox {
+  border-radius: 15px;
+  border: 1px solid #000;
+  background: #121212;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 
